--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
