feat(Add item screen):

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "build project",
-        "Menu screen"
+        "Menu screen",
+        "Alert Component"
     ]
 }
