--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
