feat(Add item screen): :construction: add finally settings in settings item screen
now when the user touch new purchase button or new wish button, the app navigate to screen depending on the button

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "build project",
         "Menu screen",
-        "Alert Component"
+        "Alert Component",
+        "Add item screen"
     ]
 }
