feat(Shopping list screen): :construction: when user touch the any categorie, navigate to shopping list view, with the color that him did choose to that categorie, id and name also

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "build project",
         "Menu screen",
         "Alert Component",
-        "Add item screen"
+        "Add item screen",
+        "Shopping list screen"
     ]
 }
