feat(Home Screen): :lipstick: add styles and fix bugs about styles in some place of de project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Menu screen",
         "Alert Component",
         "Add item screen",
-        "Shopping list screen"
+        "Shopping list screen",
+        "Home Screen"
     ]
 }
