--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.75.4",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-toast-message": "^2.2.1",
@@ -33,6 +34,7 @@
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
