fix(Onboarding): :bug: fix bug about the logic of onboarding
The app now correctly identifies whether to show onboarding or not.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Alert Component",
         "Add item screen",
         "Shopping list screen",
-        "Home Screen"
+        "Home Screen",
+        "Onboarding"
     ]
 }
