--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react-native": "0.75.4",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-charts": "^1.4.53",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
