feat(Home Screen): :lipstick: add styles in home screen
now, if user doesn't have a name, there is more gap between the components

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,9 +78,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.yeyobuylist"
+    namespace "com.Vongola_Cart"
     defaultConfig {
-        applicationId "com.yeyobuylist"
+        applicationId "com.Vongola_Cart"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
