--- a/ios/yeyobuylist.xcodeproj/xcshareddata/xcschemes/yeyobuylist.xcscheme
+++ b/ios/yeyobuylist.xcodeproj/xcshareddata/xcschemes/yeyobuylist.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "yeyobuylist.app"
-               BlueprintName = "yeyobuylist"
-               ReferencedContainer = "container:yeyobuylist.xcodeproj">
+               BuildableName = "Vongola_Cart.app"
+               BlueprintName = "Vongola_Cart"
+               ReferencedContainer = "container:Vongola_Cart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "yeyobuylistTests.xctest"
-               BlueprintName = "yeyobuylistTests"
-               ReferencedContainer = "container:yeyobuylist.xcodeproj">
+               BuildableName = "Vongola_CartTests.xctest"
+               BlueprintName = "Vongola_CartTests"
+               ReferencedContainer = "container:Vongola_Cart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "yeyobuylist.app"
-            BlueprintName = "yeyobuylist"
-            ReferencedContainer = "container:yeyobuylist.xcodeproj">
+            BuildableName = "Vongola_Cart.app"
+            BlueprintName = "Vongola_Cart"
+            ReferencedContainer = "container:Vongola_Cart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "yeyobuylist.app"
-            BlueprintName = "yeyobuylist"
-            ReferencedContainer = "container:yeyobuylist.xcodeproj">
+            BuildableName = "Vongola_Cart.app"
+            BlueprintName = "Vongola_Cart"
+            ReferencedContainer = "container:Vongola_Cart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
